--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
             </div>
             <div class="color">
                 <h3>Select Color</h3>
-                <button id="black"></button>
-                <button id="red"></button>
-                <button id="blue"></button>
-                <button id="purple"></button>
-                <button id="pink"></button>
+                <button data-value="black" class="colour"  id="black"></button>
+                <button data-value="red"   class="colour"  id="red"></button>
+                <button data-value="blue"  class="colour"  id="blue"></button>
+                <button data-value="purple"class="colour"  id="purple"></button>
+                <button data-value="pink"  class="colour"  id="pink"></button>
             </div>
             <h3>Features</h3>
             <div class="features">
